# Stormbreaker

./: .gitmodules  CITATION.cff  README.md
config/rotator/laser-testbed/testing/: nmea
deployment/measurement-campaign/insite-simulations/: WI33_ASU_1831BFCC9239_301122.lic
deployment/measurement-campaign/insite-simulations/SLC_UAV_Relay_Project/: SLC.X3DGeometry.diag  SLC.X3DGeometry.xml  SLC.antenna_pattern.diag  SLC.odin-uav-mobility.diag  SLC.odin-uav-mobility.xml  SLC.setup  SLC.txrx  SLC.vw  SLC_Terrain.dae  SLC_Terrain.ter  request.tmp
doc/: Odin_IN-DoT_Credentials.txt  Odin_UNAVCO_Credentials.txt  Purchase_Request_Form_SparkFun.xlsx  Purchase_Request_Form_TI_DigiKey.xlsx
doc/NRSM/Odin_NRSM/: main.tex  ref.bib
doc/NRSM/presentation/: Calibration_Curve_Adjusted.eps
lib/bno080/: library.properties
lib/bno080/examples/Example1-RotationVector/: Example1-RotationVector.ino
lib/bno080/examples/Example10-PrintPacket/: Example10-PrintPacket.ino
lib/bno080/examples/Example11-AdvancedConfig/: Example11-AdvancedConfig.ino
lib/bno080/examples/Example12-LinearAccelerometer/: Example12-LinearAccelerometer.ino
lib/bno080/examples/Example13-TimeStamp/: Example13-TimeStamp.ino
lib/bno080/examples/Example14-TwoSensors/: Example14-TwoSensors.ino
lib/bno080/examples/Example15-RawReadings/: Example15-RawReadings.ino
lib/bno080/examples/Example16-GyroIntegratedRotationVector/: Example16-GyroIntegratedRotationVector.ino
lib/bno080/examples/Example17-EulerAngles/: Example17-EulerAngles.ino
lib/bno080/examples/Example2-Accelerometer/: Example2-Accelerometer.ino
lib/bno080/examples/Example3-Gyro/: Example3-Gyro.ino
lib/bno080/examples/Example4-Magnetometer/: Example4-Magnetometer.ino
lib/bno080/examples/Example5-StepCounter/: Example5-StepCounter.ino
lib/bno080/examples/Example6-MetaData/: Example6-MetaData.ino
lib/bno080/examples/Example7-StabilityClassifier/: Example7-StabilityClassifier.ino
lib/bno080/examples/Example8-ActivityClassifier/: Example8-ActivityClassifier.ino
lib/bno080/src/: SparkFun_BNO080_Arduino_Library.cpp  SparkFun_BNO080_Arduino_Library.h
lib/lefebure/: Settings.txt  ntripconfig.txt
lib/rtklib/RTKLIB_bin-rtklib_2.4.3/: readme.txt
src/measurement-campaign/EarsMeasurementCampaignCode/: .gitignore  LICENSE  README.md  autoRunMeasurements.py  initializedGpsdoOnWindows.bat  lockGpsdoOriginal.grc  measureSignal.py  measureSignalCont.py  measureSignalOriginal.py  measureSignalReplay.grc  verifyGpsdoLocked.py
src/measurement-campaign/Talos/: .gitmodules  README.md
src/measurement-campaign/YAM3S/: .gitignore  LICENSE  README.md  yam3s_database_mysql_ddl.txt  yam3s_database_structure_verbose_dbdiagram_io.txt
src/powder/bam-radio/: .gitmodules  README  fftw_wisdom_colosseum
src/powder/bam-radio-design/: profile.py
src/powder/bam-radio/controller/: CMakeLists.txt
src/powder/bam-radio/controller/src/: CMakeLists.txt  adaptive_mcs_controller.cc  adaptive_mcs_controller.h  arq.cc  arq.h  arqbuffer.cc  arqbuffer.h  bam_constellation.cc  bam_constellation.h  bamassert.h  bamcufft.cu  bamcufft.h  bamfftw.cc  bamfftw.h  bamradio.cc  bandwidth.cc  bandwidth.h  bbqueue.h  buffers.cc  buffers.h  build_info.h  c2api.cc  c2api.h  cc_controller.cc  cc_controller.h  cc_data.cc  cc_data.h  cc_data.proto  channelizer.cu  channelizer.h  channelizer2.cu  channelizer2.h  collab.cc  collab.h  common.cc  common.h  ctrl_ch.cc  ctrl_ch.h  ctrl_recv.cc  ctrl_recv.h  (+81 more)
src/powder/bam-radio/controller/src/ai/: .gitignore  CMakeLists.txt  FindECL.cmake  README.md  bam-radio.asd  compile.lisp  data.lisp  de-analyzer.py  debug.lisp  decision-engine.lisp  dev-environment.lisp  graveyard.lisp  package.lisp  test.lisp  time.lisp
src/powder/bam-radio/controller/src/fsk/: README.md
src/powder/bam-radio/controller/src/fsk/include/bamfsk/: access_code_detector.h  access_code_detector_ff.h  api.h  crc32_bb.h  drop_header_bb.h  insertPreamble_bb.h  mfskMod_fc.h  mfsk_rx.h  ndaSync_ff.h  rs_ccsds_decode_bb.h  rs_ccsds_encode_bb.h  stream_to_tagged_stream.h  tsb_chunks_to_symbols_bf.h
src/powder/bam-radio/controller/src/fsk/src/: access_code_detector_ff_impl.cc  access_code_detector_ff_impl.h  access_code_detector_impl.cc  access_code_detector_impl.h  crc32_bb_impl.cc  crc32_bb_impl.h  drop_header_bb_impl.cc  drop_header_bb_impl.h  insertPreamble_bb_impl.cc  insertPreamble_bb_impl.h  mfskMod_fc_impl.cc  mfskMod_fc_impl.h  mfsk_rx_impl.cc  mfsk_rx_impl.h  mfsk_util.cc  mfsk_util.h  ndaSync_ff_impl.cc  ndaSync_ff_impl.h  qa_bamfsk.cc  qa_bamfsk.h  qa_tsb_chunks_to_symbols_bf.cc  qa_tsb_chunks_to_symbols_bf.h  rs_ccsds.cc  rs_ccsds.h  rs_ccsds_decode_bb_impl.cc  rs_ccsds_decode_bb_impl.h  rs_ccsds_encode_bb_impl.cc  rs_ccsds_encode_bb_impl.h  stream_to_tagged_stream_impl.cc  stream_to_tagged_stream_impl.h  test_bamfsk.cc  tsb_chunks_to_symbols_bf_impl.cc  tsb_chunks_to_symbols_bf_impl.h
src/powder/bam-radio/controller/src/ldpc/: Fp32f.hpp  Fp64f.hpp  IEEE802_codes.cpp  README.md  alt_encoder.cpp  csr_gf2matrix.cpp  dd_encoder.cpp  detail.hpp  flooding_decoder.cpp  gf2matrix.cpp  minstar_decoder.cpp  minstar_lut.hpp  minsum_decoder.cpp  serial_c_decoder.cpp  serial_c_minsum.cpp  sumproduct_decoder.cpp  systematic_encoder.cpp  yaldpc.hpp
src/powder/bam-radio/controller/test/: CMakeLists.txt  arqbuffer.cc  arqseg.cc  bootstrap.cc  bootstrap.h  c2api.cc  cc_multinodes.cc  cc_tx.cc  channelcode.cc  channelizer2.cc  channelizer2_unit.cc  channelizer_benchmark.cc  channelizer_poc.cu  controlchannel.cc  db.cc  de.cc  doomsday.cc  flowtracker.cc  frame.cc  frame2.cc  freq_alloc_test.cc  gps.cc  im.cc  im_mo.inc  legacy_phy.cc  legacy_phy.h  lisp.cc  median.cc  notify.cc  psd_thresh.cc  ringbuffer.cu  router.cc  sc_sync.cc  scalefac.cc  segmentqueue.cc  segmentqueue.sh  statistics.cc  test_extra.cc  test_extra.h  tx.cc  (+1 more)
src/powder/bam-radio/radio_api/: zmq.sh  (+15 more)
src/powder/srsLTE/: profile.py
src/rotator/blob-detection/: Makefile
src/rotator/e2e/: Forge.py  Raven.py  Realms.py  RxRealm.py  TxRealm.py
test/rotator/e2e-final-stretch/: gps_event_11.json  imu_trace_47.json
(+18959 files in other folders)
